<resources>
    <string name="app_name">Weather Forecast App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidity">Humidity</string>
    <string name="uv">UV</string>
    <string name="real_feel">Real Feel</string>
    <string name="pressure">Pressure</string>
    <string name="value">Value</string>
    <string name="cloud">Cloud</string>
    <string name="location_icon">Location icon</string>
    <string name="search_city">Search City</string>
    <string name="week_forecast">Week Forecast</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_city">Add City</string>
    <string name="weather_now">Weather now</string>
    <string name="the_location_for_which_the_weather_is_displayed">The location for which the weather is displayed</string>
    <string name="location">Location</string>
    <string name="metric">Metric</string>
    <string name="unit_system">Unit System</string>
    <string name="day_date_name">Day Date Name</string>
    <string name="app_icon">app icon</string>
    <string name="weather_napp">Weather\nApp</string>
    <string name="hint">__°</string>
    <string name="wind_hint">__Km/h</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">__:__AM</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">__:__PM</string>
    <string name="humidity_time">_%</string>
    <string name="pressure_value">_mbar</string>
</resources>