<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.fragments.TodayFragment">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_bar_color"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Today Weather"
                app:titleTextColor="@color/app_bar_text" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/_100sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/city_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/location_icon"
                    android:src="@drawable/ic_location"
                    app:tint="@color/text_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_ll" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/current_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/current_temp"
                app:layout_constraintStart_toStartOf="@+id/current_temp"
                app:layout_constraintTop_toBottomOf="@+id/current_temp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_40ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/layout_background"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_condition">

                <!--for Humidity -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/humidity"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--for Real feel -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/real_feel"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/real_feel_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--for UV -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/uv"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/uv_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--for Pressure -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/pressure"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/pressure_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--for Cloud -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/cloud"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/cloud_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>